kube1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: "/app1"
            pathType: Prefix
            backend:
              service:
                name: kube-app1
                port:
                  number: 80
          - path: "/app2"
            pathType: Prefix
            backend:
              service:
                name: kube-app2
                port:
                  number: 80
